--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -16,6 +17,23 @@
     </style>
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css">
     <script src="https://js.arcgis.com/4.18/"></script>
+    
+    <script>
+      require(["esri/config","esri/Map", "esri/views/MapView"], function (esriConfig,Map, MapView) {
+        esriConfig.apiKey = AAPK8f1a6c7e604541059fb9bfa44b3b4e4dZJ1DZPWPzZtRHiJ7zDl_TKPIHi3GwqcRNUHMMSyjyAjUc2LKlLVea_wJslNSdJ1i;
+
+        const map = new Map({
+          basemap: "arcgis-topographic" // Basemap layer service
+        });
+        
+        const view = new MapView({
+          map: map,
+          center: [-118.805, 34.027], // Longitude, latitude
+          zoom: 13, // Zoom level
+          container: "viewDiv" // Div element
+        });
+      });
+    </script>
   </head>
   <body>
     <div id="viewDiv"></div>
