--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <script>
       require(["esri/config","esri/Map", "esri/views/MapView"], function (esriConfig,Map, MapView) {
-        esriConfig.apiKey = AAPK8f1a6c7e604541059fb9bfa44b3b4e4dZJ1DZPWPzZtRHiJ7zDl_TKPIHi3GwqcRNUHMMSyjyAjUc2LKlLVea_wJslNSdJ1i;
+        esriConfig.apiKey = "AAPK8f1a6c7e604541059fb9bfa44b3b4e4dZJ1DZPWPzZtRHiJ7zDl_TKPIHi3GwqcRNUHMMSyjyAjUc2LKlLVea_wJslNSdJ1i";
 
         const map = new Map({
           basemap: "arcgis-topographic" // Basemap layer service
